# MlopswithSentimentAnalysis

./: README.md  docker-compose.yml  first.txt  pyproject.toml  requirements.txt  test_requests.py
backend/: app.py  requirements.txt
backend/models/: image_model.py  text_model.py
frontend/: app.py  requirements.txt
