[project]
name = "backend"
version = "0.0.1"
authors = [
  { name="Vikash Singh", email="nl.vikashsingh@gmail.com" },
]
description = "storio"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools>=42",
               "wheel"]
build-backend = "setuptools.build_meta"